Added challenger case study

--- a/L10-data-analysis-1-data-frames.Rmd
+++ b/L10-data-analysis-1-data-frames.Rmd
@@ -8,6 +8,20 @@ rm(list=objects()) # start with a clean workspace
 source("knitr_setup.R")
 ```
 
+# Prelude
+
+> "Data science is not just about AI or machine learning. It is the discipline of turning raw data into understanding."
+>
+> \- [Julia Silge](https://juliasilge.com/)
+
+Over the next three lessons, we'll begin to learn how to transform data into information and understanding. While the technical details of achieving this goal can be complicated, the goal should always be kept in mind first and foremost. To get a feel for what I mean by "transforming data into information":
+
+> Take a look at this short [case study](challengerExplosion.html) on the [1986 Space Shuttle Challenger explosion](https://en.wikipedia.org/wiki/Space_Shuttle_Challenger_disaster).
+
+Once you have read through the case study, continue reading here to start getting into the details of working with data in R.
+
+---
+
 > ### Learning Objectives
 >
 > * Describe what a data frame is.
